# sc-pacs-qt-demo

./: .gitignore  CMakeLists.txt  README.md  sc-pacs-demo.sublime-project
gui/: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
qpcscxx/: CMakeLists.txt  README.md  pcsc.cpp  pcsc.h  qpcscxx.h
resources/: sc-pacs-demo.icns
scripts/: macos-build-icns
